# llm-basics

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.yaml  prompt.txt  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/python_framework/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  openai_settings.py
src/python_framework/examples/: __init__.py  prompt_example.py  run_all.py
src/python_framework/examples/structured_outputs_tutorial/: __init__.py  client.py  exercise.py  json_utils.py  models.py  pipelines.py  responses_strict.py  tutorial.py  validators.py  verifiers.py
src/python_framework/models/: __init__.py  contact_info.py
src/python_framework/services/: __init__.py  contact_extractor.py
tests/: __init__.py  test_cli.py  test_config.py  test_contact_extractor.py  test_dockerfile.py  test_logging_config.py  test_main_module.py  test_openai_settings.py  test_package.py  test_run_all_examples.py  test_structured_outputs_tutorial.py
