[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "python-framework"
version = "0.1.0"
description = "Base Python application framework with PDM, Docker, and CI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Contributors" }]
dependencies = []

[project.scripts]
python-framework = "python_framework.cli:main"

[project.urls]
Repository = "https://github.com/example/python-framework"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11",
]

[tool.pdm]
distribution = true

# PDM's environment.which() treats any command starting with "python" as the venv
# interpreter, so bare ``pdm run python-framework`` would become ``python hello``.
# This script delegates to ``python -m python_framework`` instead.
[tool.pdm.scripts]
python-framework = { cmd = "python -m python_framework {args}" }

[tool.pdm.build]
package-dir = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-q",
    "--strict-markers",
    "--import-mode=importlib",
    "--cov=python_framework",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
filterwarnings = [
    "ignore:Module python_framework was previously imported, but not measured:coverage.exceptions.CoverageWarning",
]

[tool.coverage.run]
source_pkgs = ["python_framework"]
branch = true
omit = ["*/python_framework/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["python_framework"]
